--- a/package.json
+++ b/package.json
@@ -45,9 +45,11 @@
     "@types/react-redux": "^7.1.20",
     "@types/react-router-dom": "^5.3.2",
     "axios": "^0.24.0",
+    "node-sass": "^6.0.1",
     "react-redux": "^7.2.6",
     "react-router-dom": "^5.3.0",
     "redux": "^4.1.2",
-    "redux-thunk": "^2.4.0"
+    "redux-thunk": "^2.4.0",
+    "sass-loader": "^12.3.0"
   }
 }
