--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "coincap",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://vsmaliakou.github.io/coincap",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
@@ -23,7 +24,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -47,6 +50,7 @@
     "@types/react-redux": "^7.1.20",
     "@types/react-router-dom": "^5.3.2",
     "axios": "^0.24.0",
+    "gh-pages": "^3.2.3",
     "node-sass": "^6.0.1",
     "react-redux": "^7.2.6",
     "react-router-dom": "^5.3.0",
